tests/forester-regre/test-f0029.err
test-f0029.c:9:8: error: negative size arg of malloc(): -1
