tests/forester-regre/test-f0029.c
../forester/negative_malloc.c